# modern_cpp_learning

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
src/: strength_variable.out
src/ch2/: CMakeLists.txt  README.md  exercise.cc  exercise.out  object_oriented.cc  strength_variable.cc  template_test.cc  type_inference.cc
src/ch3/: CMakeLists.txt  function_package.cc  lambda_learning.cc  right_reference.cc
src/ch4/: CMakeLists.txt  constant_array.cc  unorder_array.cc
src/ch5/: CMakeLists.txt  smarter_pointer.cc
src/ch7/: CMakeLists.txt  consumer.cc  multiprocess.cc
