cmake_minimum_required(VERSION 3.0)
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pthread")
set(CMAKE_CXX_FLAGS "-std=c++17")
project(multiprocess)
find_package(fmt REQUIRED)
add_executable(thread_test multiprocess.cc)
target_link_libraries(thread_test fmt::fmt)
add_executable(consumer consumer.cc)
target_link_libraries(consumer fmt::fmt)